--- a/design.css
+++ b/design.css
@@ -13,3 +13,16 @@ body{
     align-items: center;
     padding: 20px;
 }
+.header{
+    text-align: center;
+    margin-bottom: 30px;
+}
+.header h1{
+    font-size: 2rem;
+    color: #007bff;
+    margin-bottom: 30px;
+}
+.header p{
+    font-size: 2rem;
+    color: #555;
+}
