--- a/design.css
+++ b/design.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
 body{
     background-color: #f4f4f4;
     color: #333;
@@ -13,6 +14,7 @@ body{
     align-items: center;
     padding: 20px;
 }
+
 .header{
     text-align: center;
     margin-bottom: 30px;
@@ -26,6 +28,7 @@ body{
     font-size: 2rem;
     color: #555;
 }
+
 .task-input{
     display: flex;
     gap: 10px;
@@ -44,6 +47,7 @@ body{
 .task-input input:focus{
     border-color: #007bff;
     outline: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .task-input button{
     padding: 12px 20px;
@@ -59,3 +63,21 @@ body{
     background-color: #0056b3;
 }
 
+.filters {
+    margin-bottom: 20px;
+    display: flex;
+    gap: 10px;
+}
+.filter-btn{
+    border: none;
+    background-color: #e0e0e0;
+    padding: 10px 16px;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+.filter-btn.active,
+.filter-btn:hover{
+    background-color: #007bff;
+    color: antiquewhite;
+}
